# AIChat

./: .env  .gitignore  README.md  aichat.db  config.yaml  dev-config.yaml  main.py  pyproject.toml
aichat/: app.py  test.py  types.py
aichat/components/: __init__.py
aichat/components/llm/: base.py
aichat/components/llm/dummy/: __init__.py  model.py
aichat/components/llm/tiny_llama/: cpu_model.py  model.py
aichat/components/llm/tiny_llama_cpu/: model.py
aichat/components/llm/transformer/: __init__.py  cpu_model.py  model.py
aichat/components/stt/: base.py
aichat/components/stt/dummy/: README.md  __init__.py  model.py
aichat/components/stt/paraformer/: README.md  __init__.py  paraformer.py
aichat/components/stt/zipformer/: __init__.py  zipformer.py
aichat/components/tts/: base.py
aichat/components/tts/dummy/: __init__.py  model.py
aichat/components/tts/kokoro/: __init__.py  kokoro.py
aichat/components/video/: base.py
aichat/db_models/: chat.py  db.py  user.py
aichat/llm/: base.py
aichat/llm/tiny_llama/: tiny_llama.py
aichat/pipeline/: config.py  context.py  factory.py  generation.py  manager.py  memory.py  pipeline.py  processor.py  response_controller.py  tracks.py
aichat/routes/: __init__.py  admin.py  chat.py  user.py
aichat/rtc/: __init__.py  manager.py  rtc.py  websocket.py
aichat/schemas/: chat.py  user.py
aichat/security/: auth.py
aichat/stt/: whisper.py
aichat/stt/zipformer/: README.md
aichat/tts/: base.py
aichat/tts/orpheus/: model.py
aichat/utils/: audio.py  prompt.py
config/: config.yaml
experiments/: evaluate_llm.py  evaluate_pipeline.py  evaluate_stt.py  evaluate_tts.py  playground.py  test_llm.py
experiments/eval_utils/llm/: __init__.py  bert_score.py  dataloader.py  emotion_score.py  generate.py  latency.py  perplexity.py
experiments/eval_utils/pipeline/: __init__.py  feeder.py  latencies.py  mocks.py  tracks.py
experiments/eval_utils/speech/: __init__.py  dataset.py  generate.py  latency.py  rtf.py  wer.py
experiments/eval_utils/synthesis/: generate.py
frontend/: feedback.html  index.css  index.html  index.js  login.html  register.html
frontend/modules/: communicator.js
frontend/static/css/: auth.css  feedback.css  index.css
frontend/static/js/: communicator.js  feedback.js  index.js  login.js  register.js
scripts/: download.py
static/: index.html
static/dictionaries/: en-us.txt
static/language/: en-us.js
static/modules/: communicator.js
tests/: conftest.py
tests/components/: test_zipformer.py
tests/components/fixtures/: mock_audio.py
tests/components/llm/: test_implementation.py
tests/components/tts/: test_kokoro.py
tests/generation_test/: conftest.py  pipeline_test.py
tests/gpu/: zipformer.py
tests/pipeline/: test_context.py  test_integration.py  test_manager.py  test_processor.py  test_response_controller.py
tests/routes/: test_chat.py  test_user.py  test_websocket.py
tests/rtc/: test_manager.py  test_websocket.py
training/: data.py  dev.jsonl  train.py
(+11 files in other folders)
