[project]
name = "aichat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "deepface>=0.0.96",
    "fastapi>=0.121.1",
    "librosa>=0.11.0",
    "numpy>=2.3.4",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-jose>=3.5.0",
    "sherpa-onnx>=1.12.15",
    "sqlmodel>=0.0.31",
    "tf-keras>=2.20.1",
    "uvicorn[standard]>=0.38.0",
    "transformers>=4.57.3",
    "pyngrok>=7.5.0",
]

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.49.1",
    "httpx>=0.28.1",
    "jiwer>=4.0.0",
    "peft>=0.18.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "sounddevice>=0.5.3",
    "trl>=0.24.0",
    "unsloth>=2026.1.2",
]

