[project]
name = "aichat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.121.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.38.0",
    "pyngrok>=7.5.0",
    "bitsandbytes>=0.49.1",
    "deepface>=0.0.98",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "numpy>=2.2.6",
    "peft>=0.18.1",
    "pip>=26.0.1",
    "sherpa-onnx>=1.12.23",
    "tf-keras>=2.20.1",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "httpx>=0.28.1",
    "jiwer>=4.0.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "sounddevice>=0.5.3",
    "trl>=0.24.0",
    "unsloth>=2026.1.2",
]
prod = [
    {include-group = "dev"},
    "vllm>=0.15.1",
]